# youapp-android

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  text_motor.cpp
app/src/main/java/com/sv/youapp/app/: MainActivity.kt  YouApp.kt
app/src/main/java/com/sv/youapp/app/activities/: MainActivity.kt
app/src/main/java/com/sv/youapp/app/auth/: AuthManager.kt
app/src/main/java/com/sv/youapp/app/test/: TextEngine.kt
app/src/main/java/com/sv/youapp/app/ui/: GradientButton.kt  MainScaffold.kt
app/src/main/java/sv/com/youapp/: MainActivity.kt  YouApp.kt
app/src/main/java/sv/com/youapp/auth/: AuthManager.kt
app/src/main/java/sv/com/youapp/core/authentication/: AuthenticationManager.kt
app/src/main/java/sv/com/youapp/core/events/: GlobalEvent.kt  GlobalEventDispatcher.kt
app/src/main/java/sv/com/youapp/core/modules/: NetworkModule.kt  SessionModule.kt
app/src/main/java/sv/com/youapp/core/navigation/: AppNavigator.kt  Routes.kt
app/src/main/java/sv/com/youapp/core/network/: AuthenticationClient.kt  MockAuthenticationClient.kt
app/src/main/res/drawable/: ic_splash_inset.xml  ic_splay_layer.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: auth-config.xml  colors.xml  config.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-night-v31/: themes.xml
app/src/main/res/values-v31/: themes.xml
gradle/: libs.versions.toml
(+32 files in other folders)
